Tue Feb 21 01:31:42 2006  Tim Janik  <timj@gtk.org>

	* web/beastdefs.doxi: removed.

Tue Feb 21 01:29:38 2006  Tim Janik  <timj@gtk.org>

	* docs/beastdefs.doxi: CVS copied here from web/.

Tue Feb 21 01:26:43 2006  Tim Janik  <timj@gtk.org>

	* docs/Makefile.am: build HTML docs with doxer.

	* docs/release-notes.doxi: 
	* docs/beast-index.doxi: ported to doxer markup.

	* docs/*.doxi: include fixes.

	* web/Makefile: include fixes.

Sun Feb 19 01:26:19 2006  Tim Janik  <timj@gtk.org>

	* web/news.doxi: announce website move.

Sun Feb 19 00:20:15 2006  Tim Janik  <timj@gtk.org>

	* web/*.doxi: misc wording and link fixes.

	* web/htaccess.in: wiki redirection fixes, updated older redirects.

Sat Feb 18 19:41:00 2006  Tim Janik  <timj@gtk.org>

	* web/style/beast-style.css: IE and indentaiton fixes. added tree 
	expanders for web menus.

	* web/webmenu.doxi: added different CSS classes for submenus and expand
	vs. collapsed state. 

	* web/sound-browser.doxi: fixed up file type icon links.

	* web/web-images/back.png:
	* web/web-images/compressed.png:
	* web/web-images/folder-open.png:
	* web/web-images/folder.png:
	* web/web-images/sound2.png:
	* web/web-images/text.png: added public domain icons from apache.

	* web/style/triangle-down-blue.png: tree expand icon by Alper Ersoy.

	* web/style/triangle-right-blue.png: tree collapsed icon by Alper Ersoy.

Fri Feb 17 23:15:42 2006  Tim Janik  <timj@gtk.org>

	* web/screenshots/: new directory containing screenshots for the beast website.

	* web/logogallery/: new directory containing images from the 2003 logo contest.

Fri Feb 17 23:09:43 2006  Tim Janik  <timj@gtk.org>

	* web/Makefile: fixed site update rules.

	* web/Makefile: consolidated build rules. added website tarball build
	rules. added remote website update rules. fixes for index file generation.

	* web/htaccess.in: new file, covering wiki rewrite rules, compatibility
	redirections and PHP size constraints.
